work on events and application layout

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -98,7 +98,7 @@ ru:
         title: 'Посоревноваться:'
         coming: 'Скоро будет'
         create: 'Создать событие'
-        future: 'Предстоящие соревнования'
+        future: 'Ближайшие события:'
         betatestersonly: 'Создание мероприятий в данный момент доступно только для участников программы тестирования.'
         table:
           event: 'Событие'
