цвет панелей навигации и футера изменен на серый

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -3,7 +3,7 @@ ru:
     header:
       home: 'Главная'
       tracks: 'Список треков'
-      about: 'Алгоритмы расчета'
+      about: 'Алгоритмы'
       sign_in: 'Войти'
       sign_up: 'Зарегистрироваться'
       sign_out: 'Выйти'
