--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -13,11 +13,11 @@ en:
       forgot_pass: 'Forgot your password?'
       admin_panel: 'Admin dashboard'
       profile: 'Profile'
-      track_analizer: "Tracks analizer"
+      track_analizer: "Tracks analyzer"
       upload_track: "Upload track"
       competitions: "GPS Performance"
     footer:
-      owner: 'Aleksandr Kunin, Aleksandr Razorenov. BWS'
+      owner: 'Aleksandr Kunin, Aleksandr Razorenov, BWS'
   track_select:
     track_select:
       title: 'Select a track to upload'
